[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/assets/Icons/White/Folder/open folder_72px.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/SubOptions/Tagging/TaggingOptions.gd" type="Script" id=2]
[ext_resource path="res://src/assets/Icons/White/Audio/Replay/repeat one_72px.png" type="Texture" id=3]
[ext_resource path="res://src/assets/Icons/White/General/remove_1_72px.png" type="Texture" id=4]
[ext_resource path="res://src/assets/Icons/White/General/Pointers/Up100pxWhite.png" type="Texture" id=5]
[ext_resource path="res://src/assets/Icons/White/File/audio specific file_74px.png" type="Texture" id=6]

[node name="TaggingOptions" type="VBoxContainer"]
margin_right = 35.0
margin_bottom = 600.0
rect_min_size = Vector2( 35, 0 )
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="OpenDirectory" type="TextureButton" parent="." groups=["Context"]]
margin_right = 35.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="OpenFiles" type="TextureButton" parent="." groups=["Context"]]
margin_top = 30.0
margin_right = 35.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 22 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="RefreshFolder" type="TextureButton" parent="." groups=["Context"]]
margin_top = 60.0
margin_right = 35.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 22 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="ToParentDirectory" type="TextureButton" parent="." groups=["Context"]]
margin_top = 90.0
margin_right = 35.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 22 )
rect_pivot_offset = Vector2( 439, -18 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="RemoveTag" type="TextureButton" parent="." groups=["Context"]]
margin_top = 120.0
margin_right = 35.0
margin_bottom = 142.0
rect_min_size = Vector2( 0, 22 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="OpenDirectory" to="." method="_on_OpenDirectory_pressed"]
[connection signal="pressed" from="OpenFiles" to="." method="_on_OpenFiles_pressed"]
[connection signal="pressed" from="RefreshFolder" to="." method="_on_RefreshFolder_pressed"]
[connection signal="pressed" from="ToParentDirectory" to="." method="_on_ToParentDirectory_pressed"]
[connection signal="pressed" from="RemoveTag" to="." method="_on_RemoveTag_pressed"]
